# synthgen

./: .gitignore  README.md  pyproject.toml
scenarios/: household_120d.yaml  household_60d.yaml  leak_30d.yaml  outlet_demo.yaml  waterleak_demo.yaml
src/sensorgen/: auto_labels.py  cli.py  emitter.py  generator.py  labels.py  match.py  rng.py  scenario.py  viz.py
src/sensorgen/anomalies/: __init__.py  base.py  drift.py  pattern.py  point.py  shape.py  state.py  transport.py
src/sensorgen/profiles/: __init__.py  base.py  binary.py  bursty.py  continuous.py
tests/: test_anomalies_drift.py  test_anomalies_pattern.py  test_anomalies_point.py  test_anomalies_shape.py  test_anomalies_state.py  test_anomalies_transport.py  test_emitter.py  test_end_to_end.py  test_labels.py  test_match.py  test_profiles_binary.py  test_profiles_bursty.py  test_profiles_continuous.py  test_rng.py  test_scenario.py  test_viz.py
