[project]
name = "sensorgen"
version = "0.1.0"
description = "Synthetic sensor data + anomaly generator"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sensorgen = "sensorgen.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
